Fixed alignment of components in table headers regarding new table filter design

--- a/molecules/_tables.scss
+++ b/molecules/_tables.scss
@@ -20,7 +20,7 @@ $table-row-border-color: darken($catkin, 5%);
     position: absolute;
     cursor: pointer;
     &.icon-desc {
-      top: rem(13px);
+      top: rem(16px);
     }
     &.icon-asc {
       top: 0;
@@ -51,25 +51,14 @@ table {
     border-bottom: 1px solid $table-header-border-color;
     background-color: $table-header-background-color;
     color: $table-header-color;
-    th {
-      text-align: left;
-    }
-    tr:not(:last-child) th {
-      border-bottom: 1px solid $table-header-row-border-bottom-color;
-    }
-    tr:not(:first-child) th {
-      border-top: 1px solid $table-header-row-border-top-color;
-      background-color: darken($table-header-background-color, 3%);
-    }
-    tr:last-child th {
-      border-bottom: 1px solid $table-header-border-color;
-    }
-    tr:first-child {
+    tr {
       th {
         padding: 0 $space-xl 0 $space-m;
-        line-height: $space-xl;
+        line-height: $space-xl - .125rem; // Somehow the line height doesn't match the target 2rem height
         white-space: nowrap;
         position: relative;
+        text-align: left;
+        border-bottom: 1px solid $table-header-border-color;
         label {
           font-size: rem(13px);
           font-weight: normal;
@@ -78,10 +67,22 @@ table {
           margin: 0;
         }
         .sort {
+          display: inline-block;
+          vertical-align: top;
+          margin-left: $space-xxs;
+        }
+        .filter {
           position: absolute;
-          right: rem(15px);
-          top: rem(3px);
-          z-index: 1;
+          right: $space-xs;
+          top: rem(-2px);
+          .dropdown-trigger,
+          .flatpickr-input {
+            color: inherit;
+          }
+          &.is-active .dropdown-trigger,
+          &.is-active .flatpickr-input {
+            color: $primary-color;
+          }
         }
       }
       th:not(:last-child) {
